compiler/lume_typech/src/tests/snapshots/lume_typech__tests__check__typech_return_value_call_expr.snap
---
source: compiler/lume_typech/src/tests/check.rs
description: "fn foo() -> Boolean {\n            return false;\n        }\n\n        fn bar() -> Int32 {\n            return foo();\n        }"
---
× error[LM4001]: mismatched types
   ╭───────────
 5 │         fn bar() -> Int32 {
 6 │             return foo();
   │                    ^^^^^^ expected type std::Int32, but found type std::Boolean...
 7 │         }
   ∶ 
 4 │ 
 5 │         fn bar() -> Int32 {
   │                     ^^^^^^^ ...because of type defined here
 6 │             return foo();
   ╰──
   help: expected type std::Int32
            found type std::Boolean
